--- a/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
+++ b/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<div *ngIf="role == 'ROLE_OPERATOR'" class="chart">
+<div *ngIf="role == 'ROLE_OPERATOR' || role == 'ROLE_SUBLCO'" class="chart">
     <h4>ADDON PACK MANAGE</h4>
     <div class="row">
         <div class="">
