--- a/src/app/admin/features/channel_setting/package-creation/package-creation.component.html
+++ b/src/app/admin/features/channel_setting/package-creation/package-creation.component.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div *ngIf="role == 'ROLE_OPERATOR'" class="chart">
+<div *ngIf="role == 'ROLE_OPERATOR' || role == 'ROLE_SUBLCO'" class="chart">
     <h4>PACKAGES</h4>
     <div class="row">
         <div class="">
