--- a/src/app/admin/features/operator_Login/lco-change-password/lco-change-password.component.html
+++ b/src/app/admin/features/operator_Login/lco-change-password/lco-change-password.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12 col-md-6 col-sm-6 p-3">
+    <div *ngIf="role == 'ROLE_OPERATOR'" class="col-12 col-md-6 col-sm-6 p-3">
         <form class="form w-100 p-3 ">
             <p class="title text-center">Personal Details</p>
             <div class="input-box mb-3 row">
@@ -52,10 +52,48 @@
             </div>
         </form>
     </div>
+    <div *ngIf="role == 'ROLE_SUBLCO'" class="col-12 col-md-6 col-sm-6 p-3">
+        <form class="form w-100 p-3 ">
+            <p class="title text-center">Personal Details</p>
+            <div class="input-box mb-3 row">
+                <div class="col-12 col-md-4">
+                    <span>First Name</span>
+                </div>
+                <div class="col-12 col-md-8">
+                    <label class="data">{{retailerName}}</label>
+                </div>
+            </div>
+            <div class="input-box mb-3 row">
+                <div class="col-12 col-md-4">
+                    <span>Retailer ID</span>
+                </div>
+                <div class="col-12 col-md-8">
+                    <label class="data">{{retailerId}}</label>
+                </div>
+            </div>
+            <div class="input-box mb-3 row">
+                <div class="col-12 col-md-4">
+                    <span>Mobile Number</span>
+                </div>
+                <div class="col-12 col-md-8">
+                    <label class="data">{{mobilenumber}}</label>
+                </div>
+            </div>
 
+            <div class="input-box mb-3 row">
+                <div class="col-12 col-md-4">
+                    <span>Address</span>
+                </div>
+                <div class="col-12 col-md-8">
+                    <label class="data">{{address}}</label>
+                </div>
+            </div>
+
+        </form>
+    </div>
     <!-- Change Password Section -->
     <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-      
+
 
         <form class="form w-100 p-3" #passwordForm="ngForm">
             <p class="title text-center">Change Password</p>
