--- a/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.scss
+++ b/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.scss
@@ -1,6 +1,7 @@
 .head {
     padding: 5px;
-    background-color: rgb(53 47 81);
+    // background-color: var(--primary-color);
+    background-color: #03917a;
     height: 40px;
     color: white;
     font-weight: 600;
@@ -29,8 +30,112 @@
     display: flex;
 }
 
+label {
+    color: blue;
+}
+
 @media screen and (max-width:560px) {
     .display {
         display: block;
     }
+}
+
+@media screen and (max-width:760px) {
+    .display {
+        display: block;
+    }
+}
+
+.select2-container {
+    width: 250px !important;
+}
+
+::ng-deep .select2-container .select2-selection--single {
+    height: 45px !important;
+    margin-top: 1%;
+}
+
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 7px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 10px;
+}
+
+.display1 {
+    display: block
+}
+
+h1 {
+    text-align: center;
+}
+
+
+
+.table1 p,
+.table2 p {
+    justify-content: center;
+    align-items: center;
+    // width: 80%;
+}
+
+.table1 p,
+.table2 p {
+    padding: 5px;
+    text-align: center;
+    background-color: #424847;
+}
+
+
+
+.example-container {
+    max-height: 400px;
+    overflow: scroll;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+
+
+.btn1 {
+    width: 50px;
+    padding: 1px;
+    background-color: #476987;
+    color: #fff;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.btn1:hover {
+    color: black;
+}
+
+
+h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.card {
+    // height: 70vh;
+    padding: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 0.25rem;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-control {
+    width: 100%;
+}
+
+.table1,
+.table2 {
+    border: 1px solid #ddd;
+    padding: 1rem;
+    border-radius: 0.25rem;
 }
